--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
     
 </div>
     </div>
+    <div class="parametro-senha">
+        <h4 class="parametro-senha_titulo">Caeacteristicas da senha</h4>
+        <div class="parametro-senha-checkbox">
+            <input
+        </div>
+    </div>
+
   </section>
 </body>
 </html>
