--- a/index.html
+++ b/index.html
@@ -36,10 +36,26 @@
     <div class="parametro-senha">
         <h4 class="parametro-senha_titulo">Caeacteristicas da senha</h4>
         <div class="parametro-senha-checkbox">
-            <input
-        </div>
-    </div>
+            <input name="maiusculo" type="checkbox" class="checkbox" checked>
+            <label for="maiusculo">Letras maiúsculas</label>
 
+        </div>
+        <div class="parametro-senha-checkbox"></div>
+        <input name="minusculo" type="checkbox" class="checkbox">
+        <label for="minusculo">Letras minúsculas</label>
+    </div>
+<div class="parametro-senha-checkbox">
+    <input name="numero" type="checkbox" class="checkbox">
+    <label for="numero">Números</label>
+
+</div>
+<div class="parametro-senha-checkbox">
+    <input name="simbolo" type="checkbox" class="checkbox">
+    <label for="simbolo">Símbolos</label>
+</div>
+<div class="parametro-senha">
+    <h4 class="parametro-senha_titulo">Força da senha</h4>
+</div>
   </section>
 </body>
 </html>
