--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <section class="conteudo">
     <div class="conteudo-titulo">
         <img src="unlock.svg"alt="cadeado fechado">
-        <h2 class="titulo-principal">Gerador de sengas</h2>
+        <h2 class="titulo-principal">Gerador de senhas</h2>
         <h3 clas-="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
     </div>
     <div class="conteudo-senha">
@@ -24,7 +25,9 @@
         </div>
         <div class="parametro-senha">
             <h4 class="parametro-senha_titulo">Caracteristicas da Senha</h4>
-        
+        <div class="parametro-senha-checkbox">
+            
+        </div>
         </div>
         <div class="parametro-senha">
             <h4 class="parametro-senha_titulo">Força da Senha</h4>
@@ -34,7 +37,6 @@
 </div>
     </div>
     <div class="parametro-senha">
-        <h4 class="parametro-senha_titulo">Caeacteristicas da senha</h4>
         <div class="parametro-senha-checkbox">
             <input name="maiusculo" type="checkbox" class="checkbox" checked>
             <label for="maiusculo">Letras maiúsculas</label>
@@ -54,7 +56,6 @@
     <label for="simbolo">Símbolos</label>
 </div>
 <div class="parametro-senha">
-    <h4 class="parametro-senha_titulo">Força da senha</h4>
 </div>
   </section>
 </body>
