--- a/index.html
+++ b/index.html
@@ -1,62 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <section class="conteudo">
-    <div class="conteudo-titulo">
-        <img src="unlock.svg"alt="cadeado fechado">
-        <h2 class="titulo-principal">Gerador de senhas</h2>
-        <h3 clas-="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
-    </div>
-    <div class="conteudo-senha">
-        <label for="senha">Senha</label>
-        <input name="senha" type="text" id="campo-senha">
-    </div>
-<div class="parametro">
-    <h3 class="parametro-titulo">Personalize sua Senha</h3>
-    <div class="parametro-coluna_senha">
-        <div class="parametro-senha">
-            <h4 class="parametro-senha_titulo">Numero de caracteres</h4>
+    <section class="conteudo">
+        <div class="conteudo-titulo">
+            <img src="unlock.svg" alt="cadeado fechado">
+            <h2 class="titulo-principal">Gerador de senhas</h2>
+            <h3 clas-="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
         </div>
-        <div class="parametro-senha">
-            <h4 class="parametro-senha_titulo">Caracteristicas da Senha</h4>
-        <div class="parametro-senha-checkbox">
-            
+        <div class="conteudo-senha">
+            <label for="senha">Senha</label>
+            <input name="senha" type="text" id="campo-senha">
         </div>
-        </div>
-        <div class="parametro-senha">
-            <h4 class="parametro-senha_titulo">Força da Senha</h4>
-        </div>
-    </div>
-    
-</div>
-    </div>
-    <div class="parametro-senha">
-        <div class="parametro-senha-checkbox">
-            <input name="maiusculo" type="checkbox" class="checkbox" checked>
-            <label for="maiusculo">Letras maiúsculas</label>
+        <div class="parametro">
+            <h3 class="parametro-titulo">Personalize sua Senha</h3>
+            <div class="parametro-coluna__senha">
+                <div class="parametro-senha">
+                    <h4 class="parametro-senha_titulo">Numero de caracteres</h4>
+                </div>
 
-        </div>
-        <div class="parametro-senha-checkbox"></div>
-        <input name="minusculo" type="checkbox" class="checkbox">
-        <label for="minusculo">Letras minúsculas</label>
-    </div>
-<div class="parametro-senha-checkbox">
-    <input name="numero" type="checkbox" class="checkbox">
-    <label for="numero">Números</label>
+                <div class="parametro-senha">
+                    <h4 class="parametro-senha_titulo">Caracteristicas da Senha</h4>
+                    <div class="parametro-senha-checkbox">
+                         <input name="minusculo" type="checkbox" class="checkbox">
+                            <label for="minusculo">Letras maiusculas</label>
+                        </div>
 
-</div>
-<div class="parametro-senha-checkbox">
-    <input name="simbolo" type="checkbox" class="checkbox">
-    <label for="simbolo">Símbolos</label>
-</div>
-<div class="parametro-senha">
-</div>
-  </section>
+                            </div>
+                            <div class="parametro-senha-checkbox">
+                            <input name="minusculo" type="checkbox" class="checkbox">
+                            <label for="minusculo">Letras minúsculas</label>
+                        </div>
+                            <div class="parametro-senha-checkbox">
+                                <input name="numero" type="checkbox" class="checkbox">
+                                <label for="numero">Números</label>
+
+                            </div>
+                            <div class="parametro-senha-checkbox">
+                                <input name="simbolo" type="checkbox" class="checkbox">
+                                <label for="simbolo">Símbolos</label>
+                            </div>
+                        </div>
+
+
+
+
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+        <div class="parametro-senha">
+            <h4 class="parametro-senha_titulo">Força da senha</h4>
+        </div>
+    </section>
 </body>
+
 </html>
